[metadata]
name = parkit
version = 0.0.9
author = Timothy Nyberg
author_email = nanoonan@marvinsmind.com
description = Package for multiprocessing programming
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/nanoonan/parkit
project_urls =
    Documentation = https://parkit.readthedocs.io
classifiers =
    Programming Language :: Python :: 3.8
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent
    Development Status :: 2 - Pre-Alpha
    Natural Language :: English
[options]
packages =
    parkit
    parkit.adapters
    parkit.storage
    parkit.system
    parkit.tools
install_requires =
    cardinality
    cloudpickle
    daemoniker
    dateparser
    filelock
    lmdb
    orjson
    psutil
    tabulate
    watchdog
